fix template file loading